--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
@@ -18,12 +19,16 @@
     "react-native": "0.64.3",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
-    "styled-components": "^5.3.5"
+    "redux": "^4.1.2",
+    "styled-components": "^5.3.5",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
   },
   "resolutions": {
