--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.64.3",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "styled-components": "^5.3.5",
     "typesafe-actions": "^5.1.0"
