--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/": "react-navigation/native",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
